# mv_c_trie1

./: .gitignore  prog.c
lib-mv-trie-ipv4-1/: .editorconfig  .gitignore  ExtraMakefile  Makefile.am  README.md  abi_api_versions.tt  configure.ac
lib-mv-trie-ipv4-1/doc/: lib-mv-trie-ipv4-1.1  lib-mv-trie-ipv4-1.3  lib-mv-trie-ipv4-1.texi
lib-mv-trie-ipv4-1/lib/: Makefile.am  lib-mv-trie-ipv4-1.c  lib-mv-trie-ipv4-1.h  lib-mv-trie-ipv4-1.pc.in
lib-mv-trie-ipv4-1/src/: Makefile.am
lib-mv-trie-ipv4-1/src/lib/: .gitignore  Makefile.am  lib-mv-trie-ipv4-1.c  lib-mv-trie-ipv4-1.h  lib-mv-trie-ipv4-1.map  lib-mv-trie-ipv4-1.pc.in
lib-mv-trie-ipv4-1/tests/: .gitignore  Makefile.am  testlib-mv-trie-ipv4-1.c
